ipq95xx: make the ucentral-schema data model work
Signed-off-by: John Crispin <john@phrozen.org>

--- a/feeds/ipq95xx/ipq53xx/files/arch/arm64/boot/dts/qcom/ipq5332-cig-wf198.dts
+++ b/feeds/ipq95xx/ipq53xx/files/arch/arm64/boot/dts/qcom/ipq5332-cig-wf198.dts
@@ -28,6 +28,10 @@
 		serial1 = &blsp1_uart1;
 		ethernet0 = "/soc/dp1";
 		ethernet1 = "/soc/dp2";
+		led-boot = &led_power;
+		led-failsafe = &led_power;
+		led-running = &led_power;
+		led-upgrade = &led_power;
 	};
 
 	chosen {
@@ -357,8 +361,8 @@
 				pwms = <&pwm 0 10000>;
 				max-brightness = <255>;
 			};
-			led2 {
-				label = "led2";
+			led_power: led2 {
+				label = "green:status";
 				pwms = <&pwm 1 10000>;
 				max-brightness = <255>;
 			};
