--- a/profiles/cig_wf198.yml
+++ b/profiles/cig_wf198.yml
@@ -9,5 +9,7 @@ feeds:
     path: ../../feeds/ipq95xx
 packages:
   - ipq53xx
+include:
+  - ucentral-ap
 diffconfig: |
   CONFIG_KERNEL_IPQ_MEM_PROFILE=0
