--- a/profiles/sercomm_ap72tip.yml
+++ b/profiles/sercomm_ap72tip.yml
@@ -9,5 +9,7 @@ feeds:
     path: ../../feeds/ipq95xx
 packages:
   - ipq53xx
+include:
+  - ucentral-ap
 diffconfig: |
   CONFIG_KERNEL_IPQ_MEM_PROFILE=0
