ipq8074: cybertan eww631 a1/b1 - support v5.4
Signed-off-by: wingate5678 <wingate.chi@cybertan.com.tw>

--- a/feeds/ipq807x_v5.4/ath11k-wifi/Makefile
+++ b/feeds/ipq807x_v5.4/ath11k-wifi/Makefile
@@ -30,6 +30,8 @@ ALLWIFIBOARDS:= \
 	cig-wf194c \
 	cig-wf194c4 \
 	cybertan-eww622-a1 \
+	cybertan-eww631-a1 \
+	cybertan-eww631-b1 \
 	edgecore-eap101 \
 	gl-ax1800 \
 	gl-axt1800 \
@@ -361,6 +363,8 @@ $(eval $(call generate-ath11k-wifi-package,cig-wf660a,Cigtech WF660a))
 $(eval $(call generate-ath11k-wifi-package,cig-wf194c,Cigtech WF194c))
 $(eval $(call generate-ath11k-wifi-package,cig-wf194c4,Cigtech WF194c4))
 $(eval $(call generate-ath11k-wifi-package,cybertan-eww622-a1,CyberTan EWW622 A1))
+$(eval $(call generate-ath11k-wifi-package,cybertan-eww631-a1,CyberTan EWW631 A1))
+$(eval $(call generate-ath11k-wifi-package,cybertan-eww631-b1,CyberTan EWW631 B1))
 $(eval $(call generate-ath11k-wifi-package,sercomm-wallaby,Sercomm Kiwi))
 $(eval $(call generate-ath11k-wifi-package,wallys-dr6018,Wallys DR6018))
 $(eval $(call generate-ath11k-wifi-package,wallys-dr6018-v4,Wallys DR6018 V4))
