--- a/profiles/cybertan_eww631-a1.yml
+++ b/profiles/cybertan_eww631-a1.yml
@@ -1,14 +1,13 @@
 ---
 profile: cybertan_eww631_a1
-target: ipq807x
-subtarget: ipq50xx
-description: Build image for the CyberTan Ceilingmount EAP EWW631-A1
-image: bin/targets/ipq807x/ipq50xx/openwrt-ipq807x-cybertan_eww631_a1-squashfs-sysupgrade.tar
+target: ipq50xx
+subtarget: generic
+description: Build image for the CyberTan Ceiling Mount EAP EWW631-A1
+image: bin/targets/ipq50xx/generic/openwrt-ipq50xx-cybertan_eww631_a1-squashfs-sysupgrade.tar
 feeds:
   - name: ipq807x
-    path: ../../feeds/ipq807x
+    path: ../../feeds/ipq807x_v5.4
 packages:
-  - ipq807x
+  - ipq50xx
 include:
-  - wifi-ax
   - ucentral-ap
