[patch] ipq807x: fix ikuai sw8 dts: rename eth0, eth1 to lan, wan respectivly
Signed-off-by: Isaev Ruslan <legale.legale@gmail.com>

--- a/feeds/ipq807x/ipq807x/files/arch/arm64/boot/dts/qcom/qcom-ipq5018-ikuai-sw8.dts
+++ b/feeds/ipq807x/ipq807x/files/arch/arm64/boot/dts/qcom/qcom-ipq5018-ikuai-sw8.dts
@@ -246,6 +246,7 @@
 			mdio-bus = <&mdio0>;
 			local-mac-address = [000000000000];
 			phy-mode = "sgmii";
+			label = "lan";
 		};
 		dp1 {
 			device_type = "network";
@@ -261,6 +262,7 @@
 			mdio-bus = <&mdio1>;
 			local-mac-address = [000000000000];
 			phy-mode = "sgmii";
+			label = "wan";
 		};
 		rpm_etm0 {
 			status = "disabled";
