[patch]: ipq50xx: ikuai sw8 change ubi rootfs partition name from ubi_rootfs to rootfs
Signed-off-by: Isaev Ruslan <legale.legale@gmail.com>

--- a/feeds/ipq807x/ipq807x/files/arch/arm64/boot/dts/qcom/qcom-ipq5018-ikuai-sw8.dts
+++ b/feeds/ipq807x/ipq807x/files/arch/arm64/boot/dts/qcom/qcom-ipq5018-ikuai-sw8.dts
@@ -20,9 +20,6 @@
 	model = "ikuai sw8";
 	compatible = "ikuai,sw8", "qcom,ipq5018-mp03.1", "qcom,ipq5018";
 	interrupt-parent = <&intc>;
-	#ifdef __IPQ_MEM_PROFILE_256_MB__
-	AUTO_MOUNT;
-	#endif
 	aliases {
 		led-boot = &led_system;
 		led-failsafe = &led_system;
@@ -36,11 +33,7 @@
 	};
 	chosen {
 		bootargs = "console=ttyMSM0,115200,n8 rw init=/init";
-	#ifdef __IPQ_MEM_PROFILE_256_MB__
-		bootargs-append = " swiotlb=1";
-	#else
-		bootargs-append = " swiotlb=1 coherent_pool=2M";
-	#endif
+		bootargs-append = " root=/dev/ubiblock0_1 swiotlb=1 coherent_pool=2M";
 		stdout-path = "serial0";
 	};
 	reserved-memory {
