ipq50xx: add support fplus wf-ap-624-m-iic aka ikuai sw8
Signed-off-by: Isaev Ruslan <legale.legale@gmail.com>

--- a/feeds/wifi-ax/ath11k-wifi/Makefile
+++ b/feeds/wifi-ax/ath11k-wifi/Makefile
@@ -138,6 +138,11 @@ $(call Package/ath11k-wifi-default)
     TITLE:=ikuai sw8 bdf
 endef
 
+define Package/ath11k-wifi-fplus-wf-ap-624m-iic
+$(call Package/ath11k-wifi-default)
+    TITLE:=fplus wf-ap-624m-iic bdf
+endef
+
 define Package/ath11k-wifi-optimcloud-d60
 $(call Package/ath11k-wifi-default)
     TITLE:=optimcloud d60 bdf
@@ -303,6 +308,13 @@ define Package/ath11k-wifi-ikuai-sw8/install
 	$(INSTALL_DATA) ./board-ikuai-sw8.bin.QCN9074 $(1)/lib/firmware/ath11k/QCN9074/hw1.0/board.bin
 endef
 
+define Package/ath11k-wifi-fplus-wf-ap-624m-iic/install
+	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/IPQ5018/hw1.0/
+	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/QCN9074/hw1.0/
+	$(INSTALL_DATA) ./board-fplus-wf-ap-624m-iic.bin.IPQ5018 $(1)/lib/firmware/ath11k/IPQ5018/hw1.0/board.bin
+	$(INSTALL_DATA) ./board-fplus-wf-ap-624m-iic.bin.QCN9074 $(1)/lib/firmware/ath11k/QCN9074/hw1.0/board.bin
+endef
+
 define Package/ath11k-wifi-optimcloud-d60/install
 	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/IPQ5018/hw1.0/
 	$(INSTALL_DIR) $(1)/lib/firmware/ath11k/QCN9074/hw1.0/
@@ -426,6 +438,7 @@ $(eval $(call BuildPackage,ath11k-wifi-cig-wf196_6g-us))
 $(eval $(call BuildPackage,ath11k-wifi-motorola-q14))
 $(eval $(call BuildPackage,ath11k-wifi-optimcloud-d50))
 $(eval $(call BuildPackage,ath11k-wifi-ikuai-sw8))
+$(eval $(call BuildPackage,ath11k-wifi-fplus-wf-ap-624m-iic))
 $(eval $(call BuildPackage,ath11k-wifi-optimcloud-d60))
 $(eval $(call BuildPackage,ath11k-wifi-hfcl-ion4xi))
 $(eval $(call BuildPackage,ath11k-wifi-hfcl-ion4xi_wp))
