ipq50xx: add noname sw8-clone mp03.5-c1 based AP
Signed-off-by: Isaev Ruslan <legale.legale@gmail.com>

--- a/feeds/wifi-ax/ath11k-wifi/Makefile
+++ b/feeds/wifi-ax/ath11k-wifi/Makefile
@@ -42,6 +42,7 @@ ALLWIFIBOARDS:= \
 	edgecore-eap102 \
 	edgecore-oap102 \
 	edgecore-eap104 \
+	noname-sw8-clone \
 	liteon-wpx8324 \
 	indio-um-310ax-v1 \
 	indio-um-510axp-v1 \
@@ -389,6 +390,7 @@ $(eval $(call generate-ath11k-wifi-package,edgecore-eap101,EdgeCore EAP101))
 $(eval $(call generate-ath11k-wifi-package,edgecore-eap102,Edgecore EAP102))
 $(eval $(call generate-ath11k-wifi-package,edgecore-oap102,Edgecore OAP102))
 $(eval $(call generate-ath11k-wifi-package,edgecore-eap104,Edgecore EAP104))
+$(eval $(call generate-ath11k-wifi-package,noname-sw8-clone,noname sw8-clone))
 $(eval $(call generate-ath11k-wifi-package,liteon-wpx8324,Liteon WPX8324))
 $(eval $(call generate-ath11k-wifi-package,indio-um-310ax-v1,Indio UM-310AX V1))
 $(eval $(call generate-ath11k-wifi-package,indio-um-510axp-v1,Indio UM-510AXP V1))
