rename eth interfaces: eth0 -> wan eth1 -> lan
Signed-off-by: Isaev Ruslan <legale.legale@gmail.com>

--- a/feeds/ipq807x_v5.4/ipq50xx/files/arch/arm64/boot/dts/qcom/qcom-ipq5018-sw8-clone.dts
+++ b/feeds/ipq807x_v5.4/ipq50xx/files/arch/arm64/boot/dts/qcom/qcom-ipq5018-sw8-clone.dts
@@ -299,6 +299,7 @@
 			local-mac-address = [000000000000];
 			phy-mode = "sgmii";
 			qcom,rx-page-mode = <0>;
+			label = "wan";
 		};
 
 		dp2 {
@@ -313,6 +314,7 @@
 			local-mac-address = [000000000000];
 			phy-mode = "sgmii";
 			qcom,rx-page-mode = <0>;
+			label = "lan";
 		};
 
 		nss-macsec1 {
