--- a/feeds/ipq807x_v5.4/ipq50xx/files/arch/arm64/boot/dts/qcom/qcom-ipq5018-sw8-clone.dts
+++ b/feeds/ipq807x_v5.4/ipq50xx/files/arch/arm64/boot/dts/qcom/qcom-ipq5018-sw8-clone.dts
@@ -549,79 +549,39 @@
 	#size-cells = <1>;
 	ranges;
 	firmware = "IPQ5018/q6_fw.mdt";
-	reg = <0x0cd00000 0x4040>,
-		<0x1938000 0x8>,
-		<0x193d204 0x4>;
-	reg-names = "qdsp6",
-			"tcsr-msip",
-			"tcsr-q6";
-	resets = <&gcc GCC_WCSSAON_RESET>,
-			<&gcc GCC_WCSS_Q6_BCR>;
+	reg = <0xcd00000 0x4040 0x4ab000 0x20 0x4a1000 0x10 0x1938000 0x08 0x193d204 0x04>;
+	reg-names = "qdsp6", "rmb", "mpm", "tcsr-msip", "tcsr-q6-boot-trig";
+	
+	resets = <&gcc GCC_WCSSAON_RESET>, <&gcc GCC_WCSS_Q6_BCR>;
+	reset-names = "wcss_aon_reset", "wcss_q6_reset";
 
-	reset-names = "wcss_aon_reset",
-			"wcss_q6_reset";
+	clocks = <&gcc GCC_Q6_AXIS_CLK>, <&gcc GCC_WCSS_ECAHB_CLK>, <&gcc GCC_Q6_AXIM_CLK>, <&gcc GCC_Q6_AXIM2_CLK>, <&gcc GCC_Q6_AHB_CLK>, <&gcc GCC_Q6_AHB_S_CLK>, <&gcc GCC_WCSS_AXI_S_CLK>;
+	clock-names = "gcc_q6_axis_clk", "gcc_wcss_ecahb_clk", "gcc_q6_axim_clk", "gcc_q6_axim2_clk", "gcc_q6_ahb_clk", "gcc_q6_ahb_s_clk", "gcc_wcss_axi_s_clk";
 
-	clocks = <&gcc GCC_Q6_AXIS_CLK>,
-		<&gcc GCC_WCSS_ECAHB_CLK>,
-		<&gcc GCC_Q6_AXIM_CLK>,
-		<&gcc GCC_Q6_AXIM2_CLK>,
-		<&gcc GCC_Q6_AHB_CLK>,
-		<&gcc GCC_Q6_AHB_S_CLK>,
-		<&gcc GCC_WCSS_AXI_S_CLK>;
-	clock-names = "gcc_q6_axis_clk",
-		"gcc_wcss_ecahb_clk",
-		"gcc_q6_axim_clk",
-		"gcc_q6_axim2_clk",
-		"gcc_q6_ahb_clk",
-		"gcc_q6_ahb_s_clk",
-		"gcc_wcss_axi_s_clk";
-
-		memory-region = <&q6_mem_regions>, <&q6_etr_region>, <&q6_caldb_region>;
+	memory-region = <&q6_mem_regions>;
 
 	qcom,rproc = <&q6v5_wcss>;
-	qcom,bootargs_smem = <507>;
-	boot-args = <0x1 0x4 0x3 0x0F 0x0 0x0>,
-			<0x2 0x4 0x2 0x12 0x0 0x0>;
+	qcom,bootargs_smem = <0x1fb>;
+	boot-args = <0x1 0x4 0x2 0x0f 0x0 0x0>;
 	status = "ok";
-	q6_wcss_pd1: remoteproc_pd1@4ab000 {
+
+	q6_wcss_pd1: remoteproc_pd1 {
 		compatible = "qcom,ipq5018-wcss-ahb-mpd";
-		reg = <0x4ab000 0x20>;
-		reg-names = "rmb";
 		firmware = "IPQ5018/q6_fw.mdt";
 		m3_firmware = "IPQ5018/m3_fw.mdt";
-		interrupts-extended = <&wcss_smp2p_in 8 0>,
-					<&wcss_smp2p_in 9 0>,
-					<&wcss_smp2p_in 12 0>,
-					<&wcss_smp2p_in 11 0>;
-		interrupt-names = "fatal",
-					"ready",
-					"spawn-ack",
-					"stop-ack";
-
-		resets = <&gcc GCC_WCSSAON_RESET>,
-				<&gcc GCC_WCSS_BCR>,
-				<&gcc GCC_CE_BCR>;
-		reset-names = "wcss_aon_reset",
-				"wcss_reset",
-				"ce_reset";
-
-		clocks = <&gcc GCC_WCSS_AHB_S_CLK>,
-				<&gcc GCC_WCSS_ACMT_CLK>,
-				<&gcc GCC_WCSS_AXI_M_CLK>;
-		clock-names = "gcc_wcss_ahb_s_clk",
-					"gcc_wcss_acmt_clk",
-					"gcc_wcss_axi_m_clk";
-
+		interrupts-extended = <&wcss_smp2p_in 8 0>, <&wcss_smp2p_in 9 0>, <&wcss_smp2p_in 12 0>, <&wcss_smp2p_in 11 0>;
+		interrupt-names = "fatal", "ready", "spawn-ack", "stop-ack";
+		resets = <&gcc GCC_WCSSAON_RESET>, <&gcc GCC_WCSS_BCR>, <&gcc GCC_CE_BCR>;
+		reset-names = "wcss_aon_reset", "wcss_reset", "ce_reset";
+		clocks = <&gcc GCC_WCSS_AHB_S_CLK>, <&gcc GCC_WCSS_ACMT_CLK>, <&gcc GCC_WCSS_AXI_M_CLK>;
+		clock-names = "gcc_wcss_ahb_s_clk", "gcc_wcss_acmt_clk", "gcc_wcss_axi_m_clk";
 		qcom,halt-regs = <&tcsr_q6_block 0xa000 0xd000 0x0>;
-
-		qcom,smem-states = <&wcss_smp2p_out 8>,
-					<&wcss_smp2p_out 9>,
-					<&wcss_smp2p_out 10>;
-		qcom,smem-state-names = "shutdown",
-					"stop",
-					"spawn";
+		qcom,smem-states = <&wcss_smp2p_out 8>, <&wcss_smp2p_out 9>, <&wcss_smp2p_out 10>;
+		qcom,smem-state-names = "shutdown", "stop", "spawn";
 		memory-region = <&q6_ipq5018_data>, <&m3_dump>, <&q6_etr_region>, <&q6_caldb_region>;
-
+		qca,int_radio;
+		reg = <0x4ab000 0x20>;
+		reg-names = "rmb";
 	};
 
 	q6_wcss_pd2: remoteproc_pd2 {
@@ -654,24 +614,46 @@
 
 &wifi0 {
 	/* IPQ5018 */
+	qcom,bdf-addr = <0x4c400000 0x4c400000 0x4c400000 0x00 0x00>;
+	qcom,board_id = <0x24>;
+	qcom,bt-active-time = <0x00>;
+	qcom,bt-priority-time = <0x00>;
+	qcom,caldb-addr = <0x4d400000 0x4d400000 0x00 0x00 0x00>;
+	qcom,caldb-size = <0x200000>;
+	
 	qcom,multipd_arch;
 	qcom,rproc = <&q6_wcss_pd1>;
 	qcom,userpd-subsys-name = "q6v5_wcss_userpd1";
 	qcom,tgt-mem-mode = <1>;
-	qcom,board_id = <0x23>;
+	qcom,ath11k-fw-memory-mode = <1>;
 	memory-region = <&q6_ipq5018_data>;
+	mem-region = <&q6_ipq5018_data>;
 	status = "ok";
 };
 
 &wifi1 {
 	/* QCN6122 5G */
+	qcom,bdf-addr = <0x4d600000 0x4d600000 0x4d300000 0x00 0x00>;
+	qcom,board_id = <0x60>;
+	qcom,caldb-addr = <0x4e800000 0x4e800000 0x00 0x00 0x00>;
+	qcom,caldb-size = <0x500000>;
+
 	qcom,multipd_arch;
 	qcom,userpd-subsys-name = "q6v5_wcss_userpd2";
 	qcom,rproc = <&q6_wcss_pd2>;
 	qcom,tgt-mem-mode = <1>;
-	qcom,board_id = <0x60>;
+	qcom,ath11k-fw-memory-mode = <1>;
 	memory-region = <&q6_qcn6122_data1>;
+	mem-region = <&q6_qcn6122_data1>;
 	status = "ok";
+};
+
+&soc {
+	/* unused nodes */
+	/delete-node/ wifi2@c000000;
+	/delete-node/ wifi3@f00000;
+	/delete-node/ wifi4@f00000;
+	/delete-node/ wifi5@f00000;
 };
 
 &usb3 {
