--- a/feeds/ipq807x_v5.4/ipq50xx/files/arch/arm64/boot/dts/qcom/qcom-ipq5018-sw8-clone.dts
+++ b/feeds/ipq807x_v5.4/ipq50xx/files/arch/arm64/boot/dts/qcom/qcom-ipq5018-sw8-clone.dts
@@ -31,7 +31,6 @@
 		stdout-path = "serial0";
 	};
 
-
 	keys {
 		compatible = "gpio-keys";
 
@@ -45,22 +44,28 @@
 	leds {
 		compatible = "gpio-leds";
 
-		led_system: system {
+		system {
 			color = <LED_COLOR_ID_RED>;
 			function = LED_FUNCTION_STATUS;
-			gpios = <&tlmm 32 GPIO_ACTIVE_HIGH>;
+			gpios = <&tlmm 31 GPIO_ACTIVE_HIGH>;
 		};
 
 		wlan2g {
 			color = <LED_COLOR_ID_GREEN>;
 			function = LED_FUNCTION_WLAN;
-			gpios = <&tlmm 37 GPIO_ACTIVE_HIGH>;
+			gpios = <&tlmm 32 GPIO_ACTIVE_HIGH>;
 		};
 
 		wlan5g {
 			color = <LED_COLOR_ID_BLUE>;
 			function = LED_FUNCTION_WLAN;
-			gpios = <&tlmm 35 GPIO_ACTIVE_HIGH>;
+			gpios = <&tlmm 33 GPIO_ACTIVE_HIGH>;
+		};
+		
+		bt {
+			color = <LED_COLOR_ID_RED>;
+			function = LED_FUNCTION_BLUETOOTH;
+			gpios = <&tlmm 27 GPIO_ACTIVE_HIGH>;
 		};
 	};
 
@@ -174,180 +179,6 @@
 		};
 	};
 
-	soc {
-		serial@78af000 {
-			status = "ok";
-		};
-
-		blsp1_uart2: serial@78b0000 {
-			pinctrl-0 = <&blsp1_uart_pins>;
-			pinctrl-names = "default";
-			status = "ok";
-		};
-
-		qpic_bam: dma@7984000{
-			status = "ok";
-		};
-
-		nand: qpic-nand@79b0000 {
-			pinctrl-0 = <&qspi_nand_pins>;
-			pinctrl-names = "default";
-			status = "ok";
-		};
-
-		spi_0: spi@78b5000 { /* BLSP1 QUP0 */
-			pinctrl-0 = <&blsp0_spi_pins>;
-			pinctrl-names = "default";
-			cs-select = <0>;
-			status = "ok";
-
-			m25p80@0 {
-				#address-cells = <1>;
-				#size-cells = <1>;
-				reg = <0>;
-				compatible = "n25q128a11";
-				linux,modalias = "m25p80", "n25q128a11";
-				spi-max-frequency = <50000000>;
-				use-default-sizes;
-			};
-		};
-
-		mdio0: mdio@88000 {
-			status = "ok";
-
-			ethernet-phy@0 {
-				reg = <7>;
-			};
-		};
-
-		mdio1: mdio@90000 {
-			status = "ok";
-			pinctrl-0 = <&mdio1_pins>;
-			pinctrl-names = "default";
-			phy-reset-gpio = <&tlmm 39 0>;
-			ethernet-phy@0 {
-				reg = <0>;
-			};
-
-			ethernet-phy@1 {
-				reg = <1>;
-			};
-
-			ethernet-phy@2 {
-				reg = <2>;
-			};
-
-			ethernet-phy@3 {
-				reg = <3>;
-			};
-		};
-
-		ess-instance {
-			num_devices = <0x2>;
-			ess-switch@0x39c00000 {
-				compatible = "qcom,ess-switch-ipq50xx";
-				device_id = <0>;
-				switch_mac_mode = <0xf>; /* mac mode for uniphy instance*/
-				cmnblk_clk = "internal_96MHz"; /* cmnblk clk*/
-				qcom,port_phyinfo {
-					port@0 {
-						port_id = <1>;
-						phy_address = <7>;
-					};
-					port@1 {
-						port_id = <2>;
-						forced-speed = <1000>;
-						forced-duplex = <1>;
-					};
-				};
-				led_source@0 {
-					source = <0>;
-					mode = "normal";
-					speed = "all";
-					blink_en = "enable";
-					active = "high";
-				};
-			};
-			ess-switch1@1 {
-				compatible = "qcom,ess-switch-qca83xx";
-				device_id = <1>;
-				switch_access_mode = "mdio";
-				mdio-bus = <&mdio1>;
-				reset_gpio = <&tlmm 0x27 0>;
-				switch_cpu_bmp = <0x40>;  /* cpu port bitmap */
-				switch_lan_bmp = <0x1e>; /* lan port bitmap */
-				switch_wan_bmp = <0x0>;  /* wan port bitmap */
-				qca,ar8327-initvals = <
-						0x00004 0x7600000   /* PAD0_MODE */
-						0x00008 0x1000000   /* PAD5_MODE */
-						0x0000c 0x80	/* PAD6_MODE */
-						0x00010 0x2613a0    /* PORT6 FORCE MODE*/
-						0x000e4 0xaa545     /* MAC_POWER_SEL */
-						0x000e0 0xc74164de  /* SGMII_CTRL */
-						0x0007c 0x4e	/* PORT0_STATUS */
-						0x00094 0x4e	/* PORT6_STATUS */
-				>;
-				qcom,port_phyinfo {
-					port@0 {
-						port_id = <1>;
-						phy_address = <0>;
-					};
-					port@1 {
-						port_id = <2>;
-						phy_address = <1>;
-					};
-					port@2 {
-						port_id = <3>;
-						phy_address = <2>;
-					};
-					port@3 {
-						port_id = <4>;
-						phy_address = <3>;
-					};
-				};
-			};
-		};
-
-		dp1 {
-			device_type = "network";
-			compatible = "qcom,nss-dp";
-			clocks = <&gcc GCC_SNOC_GMAC0_AXI_CLK>;
-			clock-names = "nss-snoc-gmac-axi-clk";
-			qcom,id = <1>;
-			reg = <0x39C00000 0x10000>;
-			interrupts = <GIC_SPI 101 IRQ_TYPE_LEVEL_HIGH>;
-			qcom,mactype = <2>;
-			qcom,link-poll = <1>;
-			qcom,phy-mdio-addr = <7>;
-			mdio-bus = <&mdio0>;
-			local-mac-address = [000000000000];
-			phy-mode = "sgmii";
-			qcom,rx-page-mode = <0>;
-			label = "wan";
-		};
-
-		dp2 {
-			device_type = "network";
-			compatible = "qcom,nss-dp";
-			clocks = <&gcc GCC_SNOC_GMAC1_AXI_CLK>;
-			clock-names = "nss-snoc-gmac-axi-clk";
-			qcom,id = <2>;
-			reg = <0x39D00000 0x10000>;
-			interrupts = <GIC_SPI 109 IRQ_TYPE_LEVEL_HIGH>;
-			qcom,mactype = <2>;
-			local-mac-address = [000000000000];
-			phy-mode = "sgmii";
-			qcom,rx-page-mode = <0>;
-			label = "lan";
-		};
-
-		nss-macsec1 {
-			compatible = "qcom,nss-macsec";
-			phy_addr = <0x1c>;
-			mdiobus = <&mdio1>;
-		};
-	};
-
 	qcom,test@0 {
 		status = "ok";
 	};
@@ -357,44 +188,179 @@
 	};
 };
 
+
+&soc {
+	serial@78af000 {
+		status = "ok";
+	};
+
+	qpic_bam: dma@7984000{
+		status = "ok";
+	};
+
+	nand: qpic-nand@79b0000 {
+		pinctrl-0 = <&qspi_nand_pins>;
+		pinctrl-names = "default";
+		status = "ok";
+	};
+
+	spi_0: spi@78b5000 { /* BLSP1 QUP0 */
+		pinctrl-0 = <&blsp0_spi_pins>;
+		pinctrl-names = "default";
+		cs-select = <0>;
+		status = "ok";
+
+		m25p80@0 {
+			#address-cells = <1>;
+			#size-cells = <1>;
+			reg = <0>;
+			compatible = "n25q128a11";
+			linux,modalias = "m25p80", "n25q128a11";
+			spi-max-frequency = <50000000>;
+			use-default-sizes;
+		};
+	};
+
+	mdio0: mdio@88000 {
+		status = "ok";
+
+		ethernet-phy@0 {
+			reg = <7>;
+		};
+	};
+
+	mdio1: mdio@90000 {
+		status = "ok";
+		pinctrl-0 = <&mdio1_pins>;
+		pinctrl-names = "default";
+		phy-reset-gpio = <&tlmm 39 0>;
+		ethernet-phy@0 {
+			reg = <0>;
+		};
+
+		ethernet-phy@1 {
+			reg = <1>;
+		};
+
+		ethernet-phy@2 {
+			reg = <2>;
+		};
+
+		ethernet-phy@3 {
+			reg = <3>;
+		};
+	};
+
+	ess-instance {
+		num_devices = <0x2>;
+		ess-switch@0x39c00000 {
+			compatible = "qcom,ess-switch-ipq50xx";
+			device_id = <0>;
+			switch_mac_mode = <0xf>; /* mac mode for uniphy instance*/
+			cmnblk_clk = "internal_96MHz"; /* cmnblk clk*/
+			qcom,port_phyinfo {
+				port@0 {
+					port_id = <1>;
+					phy_address = <7>;
+				};
+				port@1 {
+					port_id = <2>;
+					forced-speed = <1000>;
+					forced-duplex = <1>;
+				};
+			};
+			led_source@0 {
+				source = <0>;
+				mode = "normal";
+				speed = "all";
+				blink_en = "enable";
+				active = "high";
+			};
+		};
+		ess-switch1@1 {
+			compatible = "qcom,ess-switch-qca83xx";
+			device_id = <1>;
+			switch_access_mode = "mdio";
+			mdio-bus = <&mdio1>;
+			reset_gpio = <&tlmm 0x27 0>;
+			switch_cpu_bmp = <0x40>;  /* cpu port bitmap */
+			switch_lan_bmp = <0x1e>; /* lan port bitmap */
+			switch_wan_bmp = <0x0>;  /* wan port bitmap */
+			qca,ar8327-initvals = <
+					0x00004 0x7600000   /* PAD0_MODE */
+					0x00008 0x1000000   /* PAD5_MODE */
+					0x0000c 0x80	/* PAD6_MODE */
+					0x00010 0x2613a0    /* PORT6 FORCE MODE*/
+					0x000e4 0xaa545     /* MAC_POWER_SEL */
+					0x000e0 0xc74164de  /* SGMII_CTRL */
+					0x0007c 0x4e	/* PORT0_STATUS */
+					0x00094 0x4e	/* PORT6_STATUS */
+			>;
+			qcom,port_phyinfo {
+				port@0 {
+					port_id = <1>;
+					phy_address = <0>;
+				};
+				port@1 {
+					port_id = <2>;
+					phy_address = <1>;
+				};
+				port@2 {
+					port_id = <3>;
+					phy_address = <2>;
+				};
+				port@3 {
+					port_id = <4>;
+					phy_address = <3>;
+				};
+			};
+		};
+	};
+
+	dp1 {
+		device_type = "network";
+		compatible = "qcom,nss-dp";
+		clocks = <&gcc GCC_SNOC_GMAC0_AXI_CLK>;
+		clock-names = "nss-snoc-gmac-axi-clk";
+		qcom,id = <1>;
+		reg = <0x39C00000 0x10000>;
+		interrupts = <GIC_SPI 101 IRQ_TYPE_LEVEL_HIGH>;
+		qcom,mactype = <2>;
+		qcom,link-poll = <1>;
+		qcom,phy-mdio-addr = <7>;
+		mdio-bus = <&mdio0>;
+		local-mac-address = [000000000000];
+		phy-mode = "sgmii";
+		qcom,rx-page-mode = <0>;
+		label = "wan";
+	};
+
+	dp2 {
+		device_type = "network";
+		compatible = "qcom,nss-dp";
+		clocks = <&gcc GCC_SNOC_GMAC1_AXI_CLK>;
+		clock-names = "nss-snoc-gmac-axi-clk";
+		qcom,id = <2>;
+		reg = <0x39D00000 0x10000>;
+		interrupts = <GIC_SPI 109 IRQ_TYPE_LEVEL_HIGH>;
+		qcom,mactype = <2>;
+		local-mac-address = [000000000000];
+		phy-mode = "sgmii";
+		qcom,rx-page-mode = <0>;
+		label = "lan";
+	};
+
+	nss-macsec1 {
+		compatible = "qcom,nss-macsec";
+		phy_addr = <0x1c>;
+		mdiobus = <&mdio1>;
+	};
+};
+
 &tlmm {
-	pinctrl-0 = <&blsp0_uart_pins &mcu_pins>;
+	pinctrl-0 = <&blsp0_uart_pins &phy_led_pins>;
 	pinctrl-names = "default";
-
-	mcu_pins: mcu_pins {
-		mcu_rst {
-			pins = "gpio31";
-			function = "gpio";
-			drive-strength = <8>;
-			bias-disable;
-			output-low;
-		};
-
-		mcu_sbl {
-			pins = "gpio35";
-			function = "gpio";
-			drive-strength = <8>;
-			bias-disable;
-			output-low;
-		};
-	};
-
-	blsp0_uart_pins: uart_pins {
-		blsp0_uart_rx_tx {
-			pins = "gpio20", "gpio21";
-			function = "blsp0_uart0";
-			bias-disable;
-		};
-	};
-
-	blsp1_uart_pins: blsp1_uart_pins {
-		blsp1_uart_rx_tx {
-			pins = "gpio23", "gpio25", "gpio24", "gpio26";
-			function = "blsp1_uart2";
-			bias-disable;
-		};
-	};
-
+	
 	blsp0_spi_pins: blsp0_spi_pins {
 		mux {
 			pins = "gpio10", "gpio11", "gpio12", "gpio13";
@@ -403,27 +369,52 @@
 			bias-disable;
 		};
 	};
-
-	qspi_nand_pins: qspi_nand_pins {
-		qspi_clock {
-			pins = "gpio9";
-			function = "qspi_clk";
-			drive-strength = <8>;
+	
+	blsp0_uart_pins: blsp0_uart_pins {
+		blsp0_uart_rx_tx {
+			pins = "gpio20", "gpio21";
+			function = "blsp0_uart0";
 			bias-disable;
 		};
+	};
 
-		qspi_cs {
-			pins = "gpio8";
-			function = "qspi_cs";
-			drive-strength = <8>;
-			bias-disable;
+	button_pins: button_pins {
+
+		reset_button {
+			bias-pull-up;
+			drive-strength = <0x08>;
+			function = "gpio";
+			pins = "gpio28";
+		};
+	};
+
+	leds_pins: leds_pinmux {
+		led_bt {
+			bias-pull-up;
+			drive-strength = <0x08>;
+			function = "gpio";
+			pins = "gpio27";
 		};
 
-		qspi_data {
-			pins = "gpio4", "gpio5", "gpio6", "gpio7";
-			function = "qspi_data";
-			drive-strength = <8>;
-			bias-disable;
+		sysled_blue {
+			bias-pull-up;
+			drive-strength = <0x08>;
+			function = "gpio";
+			pins = "gpio33";
+		};
+
+		sysled_green {
+			bias-pull-up;
+			drive-strength = <0x08>;
+			function = "gpio";
+			pins = "gpio32";
+		};
+
+		sysled_red {
+			bias-pull-up;
+			drive-strength = <0x08>;
+			function = "gpio";
+			pins = "gpio31";
 		};
 	};
 
@@ -434,7 +425,6 @@
 			drive-strength = <8>;
 			bias-pull-up;
 		};
-
 		mux_1 {
 			pins = "gpio37";
 			function = "mdio";
@@ -443,85 +433,103 @@
 		};
 	};
 
-	i2c_pins: i2c_pins {
-		i2c_scl {
-			pins = "gpio33";
-			function = "blsp2_i2c0";
+	phy_led_pins: phy_led_pins {
+		gephy_led_pin {
+			pins = "gpio46";
+			function = "led0";
 			drive-strength = <8>;
-			bias-pull-up;
-		};
-
-		i2c_sda {
-			pins = "gpio34";
-			function = "blsp2_i2c0";
-			drive-strength = <8>;
-			bias-pull-up;
+			bias-pull-down;
 		};
 	};
 
-	audio_pins: audio_pinmux {
-		mux_1 {
-			pins = "gpio24";
-			function = "audio_rxbclk";
-			drive-strength = <8>;
-			bias-pull-down;
-		};
-		mux_2 {
-			pins = "gpio25";
-			function = "audio_rxfsync";
-			drive-strength = <8>;
-			bias-pull-down;
-		};
-		mux_3 {
-			pins = "gpio26";
-			function = "audio_rxd";
-			drive-strength = <8>;
-			bias-pull-down;
-		};
-		mux_4 {
-			pins = "gpio27";
-			function = "audio_txmclk";
-			drive-strength = <8>;
-			bias-pull-down;
-		};
-		mux_5 {
-			pins = "gpio28";
-			function = "audio_txbclk";
-			drive-strength = <8>;
-			bias-pull-down;
-		};
-		mux_6 {
-			pins = "gpio29";
-			function = "audio_txfsync";
-			drive-strength = <8>;
-			bias-pull-down;
-		};
-		mux_7 {
-			pins = "gpio30";
-			function = "audio_txd";
-			drive-strength = <8>;
-			bias-pull-down;
-		};
+	qspi_nand_pins: qspi_nand_pins {
+		qspi_clock {
+				pins = "gpio9";
+				function = "qspi_clk";
+				drive-strength = <8>;
+				bias-disable;
+			};
+		qspi_cs {
+				pins = "gpio8";
+				function = "qspi_cs";
+				drive-strength = <8>;
+				bias-disable;
+			};
+		qspi_data_0 {
+				pins = "gpio7";
+				function = "qspi0";
+				drive-strength = <8>;
+				bias-disable;
+			};
+		qspi_data_1 {
+				pins = "gpio6";
+				function = "qspi1";
+				drive-strength = <8>;
+				bias-disable;
+			};
+		qspi_data_2 {
+				pins = "gpio5";
+				function = "qspi2";
+				drive-strength = <8>;
+				bias-disable;
+			};
+		qspi_data_3 {
+				pins = "gpio4";
+				function = "qspi3";
+				drive-strength = <8>;
+				bias-disable;
+			};
 	};
 };
 
 &soc {
-	gpio-export {
-		compatible = "gpio-export";
-		#size-cells = <0>;
-
-		mcu-bootloader {
-			gpio-export,name = "mcu-bootloader";
-			gpio-export,output = <0>;
-			gpios = <&tlmm 35 GPIO_ACTIVE_LOW>;
-		};
-
-		mcu-enable {
-			gpio-export,name = "mcu-enable";
-			gpio-export,output = <0>;
-			gpios = <&tlmm 31 GPIO_ACTIVE_HIGH>;
+	gpio_keys {
+		compatible = "gpio-keys";
+		pinctrl-0 = <&button_pins>;
+		pinctrl-names = "default";
+		button@1 {
+			label = "reset";
+			linux,code = <KEY_RESTART>;
+			gpios = <&tlmm 28 GPIO_ACTIVE_LOW>;
+			linux,input-type = <1>;
+			debounce-interval = <60>;
 		};
 	};
+	leds {
+		compatible = "gpio-leds";
+		pinctrl-0 = <&leds_pins>;
+		pinctrl-names = "default";
+		status = "ok";
+
+		led@27 {
+			default-state = "off";
+			gpios = <&tlmm 27 GPIO_ACTIVE_HIGH>;
+			label = "led_bluetooth";
+			color = "blue";
+		};
+
+		led_system: led@31 {
+			default-state = "off";
+			gpios = <&tlmm 31 GPIO_ACTIVE_HIGH>;
+			label = "system";
+			color = "red";
+		};
+
+		led@32 {
+			default-state = "off";
+			gpios = <&tlmm 32 GPIO_ACTIVE_HIGH>;
+			label = "wlan2g";
+			color = "green";
+		};
+
+		led@33 {
+			default-state = "off";
+			gpios = <&tlmm 33 GPIO_ACTIVE_HIGH>;
+			label = "wlan5g";
+			color = "blue";
+		};
+	};
+
 };
 
 &q6v5_wcss {
@@ -586,11 +594,6 @@
 					"spawn";
 		memory-region = <&q6_qcn6122_data1>, <&m3_dump_qcn6122_1>, <&q6_qcn6122_etr_1>, <&q6_qcn6122_caldb_1>;
 	};
-};
-
-&i2c_0 {
-	pinctrl-0 = <&i2c_pins>;
-	pinctrl-names = "default";
 };
 
 &wifi0 {
